# EmailCampaign

./: .env.example  .flake8  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/agents/: code-reviewer.md  security-analyst.md  test-generator.md
.github/workflows/: ci.yml  quick-check.yml  test-smtp.yml  verify-emails.yml
src/emailcampaign/: __init__.py  brevo_client.py  cli.py  domain_finder.py  email_finder.py  email_verifier.py  pattern_generator.py
tests/: __init__.py  test_pattern_generator.py
